# backendAreum

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  fly.toml
.cargo/: config.toml
.sqlx/: query-2617883ad9b0f6f9d75695c617f088b7edb340129bd3adc4a642d6a45125e7dc.json  query-265fff42b5319e001f8813b2433d9db66deee3577de476cf625287daa6df8c0e.json  query-2cef796bcffa7c7baad2c68773d1d242256a9bf1cab80c9a2ea058eaf71add12.json  query-2d9f61a3ca3f9e329d3136fdb982b5a2f539317f2a13616965fa65c71a77fa2f.json  query-32105c4942583775cae9eacff8d327f4be9f2cc22097f15d13b49dcbf4997f2f.json  query-358eeedd8dd34e0706cb138af5291e680c7681e438d8c83d0312bda3e3af7453.json  query-35c5583241924b40003916b54fbb7a59812363693f67359a1a557763d274054c.json  query-35f6b19f6050246e2598187360da9a939f407630aeabcd09aa3812dc9b40b5ba.json  query-36b671360dff67f825026cffea1279faab4ec2bf31c2fe952a31f85c9fe92ecb.json  query-39a5f4932ba4e28fb9569f94ee1dd18e5330d77001991cad6cb7806a39ce1867.json  query-3cd0efe28c74b45a6dd613fc938fdd68386fdb6874c729af6da6cdc9dd79a444.json  query-43126c0e8ade390a7dc4d8342e24e93a05b01901500d361dcbaf57ffc03358c6.json  query-4e8ad30fe923dd1e60579fa64ceaa6de644f986990006fa50c7062e70329ba7b.json  query-4f3143058c63e7f6068fba9943fe83d456b20bf315cfb44947924a76d0beb2ed.json  query-4fead47820ec699aec49aa9da70e6d0b3b7dab14a4e6e15e369521d0c0007cf2.json  query-54de4aade8381e4b4e5ae08f52ec197dde809caa4f7cb8abf1080bd53a53a603.json  query-5b77e3266770cc4a7077f499993fcfccc0e0de81e0031308ce6862a0ec728567.json  query-610ab66bfb742e556b50bc1988303a1ffc5a21b82613cb0e1ac47c1c421bb225.json  query-683aa01de37d62d80e4fe7f84592e1e54edf66d3680024ae2cfccbcf2fdc4b44.json  query-6b59a6f6574b62e0af4c29406ff4b46abd92674777f4adce9ccc898f76788c2c.json  query-6daef8d1a36c7fbee31cb745984f3ee324b9622a5f3f4109efdd6fefc789a0f0.json  query-6dc1da965f112a97bb0aa67c9ad054643bd6777f6bd77b7aea9cfc8b744b17fe.json  query-73501c74f67577e3a119c3907da7f5d798ccf88d3b2e6bc15c8dd6da9226d929.json  query-74b01cac56c7ee0769331bddd730b4d632b7a83f2f588956bd5eee207c2c8e6b.json  query-7c12728f9fef5e5a4ca02fe38042d93a137e3bb4161d5ca1b11fdd6ded0f5d9e.json  query-80a13bc9c782e24c9f707a330c680a6b06d38986d6dc696b3961fa022b01c0fd.json  query-81b01250048d52bda594e0dc9f25a104cafddbe820230952fc84645e5ab60ec7.json  query-8af2b64c6adc1ef9cd04c58c1f693bbe893b51c0989935770ca26e27501d42be.json  query-90b6800e83da69fce7d8392a25126a8d036725e60316a5fccd2736822dac4b5c.json  query-9104e386e2f888e76c721471fa193d149fd79d1a3fdf7c109b505d5c5415ed17.json  (+25 more)
configuration/: base.yml
docs/: 00-api-docs.md  (+14 more)
(+79 files in other folders)
