[package]
name = "areum-backend"
version = "0.1.0"
authors = ["Volker Leukhardt"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "areum-backend"
path = "src/main.rs"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.39"
bcrypt = "0.17.0"
serde = "1.0.217"
uuid = { version = "1.13.2", features = ["v4", "serde"] }
serde_json = "1.0.138"
sqlx-cli = { version = "0.8.3", features = ["postgres"] }